--- a/views/custom-page.ejs
+++ b/views/custom-page.ejs
@@ -7,7 +7,7 @@
     <meta name="description" content="Dive into one-on-one chats through private threads on Discord..">
     <meta name="author" content="Yapcord">
 
-    <title>Yapcord</title>
+    <title>Raktalink</title>
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext" rel="stylesheet">
     <link href="../assets/web/css/bootstrap.css" rel="stylesheet">
